--- a/react-complete-guide/src/components/UI/Modal/Modal.css
+++ b/react-complete-guide/src/components/UI/Modal/Modal.css
@@ -8,7 +8,7 @@
   padding: 16px;
   left: 15%;
   top: 30%;
-  box-sixing: border-box;
+  box-sizing: border-box;
   transition: all 0.3s ease-out;
 }
 
